Fix footer a element being invisible sometimes

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -167,6 +167,10 @@ footer {
 	margin: 0 1rem;
 }
 
+footer a {
+	color: black;
+}
+
 /* TABLET STYLES */
 
 @media screen and (min-width: 630px) {
@@ -182,6 +186,10 @@ footer {
 	ol.blog-comments {
 		width: 70%;
 		margin: 0 auto;
+	}
+
+	footer a {
+		color: white;
 	}
 }
 
